<resources>
    <string name="app_name">学士说</string>
    <string name="xue">学</string>
    <string name="shi">士</string>
    <string name="shuo">说</string>
    <string name="cube_ptr_hours_ago"> 小时之前</string>
    <string name="cube_ptr_last_update">上次更新: </string>
    <string name="cube_ptr_minutes_ago"> 分钟之前</string>
    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>
    <string name="cube_ptr_refreshing">加载中...</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_seconds_ago"> 秒之前</string>
    <string name="settings_error_market">无法打开应用市场</string>
    <string name="tips_strings">提示</string>
    <string name="student">我是学生/家长</string>
    <string name="teacher">我是家教</string>
    <string name="phone_number">手机号</string>
    <string name="key">密码</string>
    <string name="login_student">登录</string>
    <string name="register">注册</string>
    <string name="forget_key">忘记密码？</string>
    <string name="teacher_info">教师信息</string>
    <string name="teacher_name">许廷昆</string>
    <string name="teacher_school">学校:</string>
    <string name="teacher_school_name">辽宁工程技术大学</string>
    <string name="teacher_academy">学院:</string>
    <string name="teacher_academy_name">矿业学院</string>
    <string name="subject">教学科目</string>
    <string name="area">教学区域</string>
    <string name="teach_experience">教学经历</string>
    <string name="evaluation">自我评价</string>
    <string name="evaluation_content">认真负责</string>
    <string name="chinese">语文</string>
    <string name="middle_school">初中</string>
    <string name="high_school">高中</string>
    <string name="class_hour_cost">课时费：</string>
    <string name="unit">元/小时</string>
    <string name="location">辽宁省大连市</string>
    <string name="experience">有过四次家教经历</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="morning">上午:</string>
    <string name="afternoon">下午:</string>
    <string name="evening">晚上:</string>
    <string name="question_feedback">问题反馈</string>
    <string name="question_advice">请输入您的问题或者建议:</string>
    <string name="most_hint">您最多可输入100字</string>
    <string name="QQ_hint">请留下您的联系方式以便我们进行回复（QQ、电话、邮箱等）</string>
    <string name="submit">确认提交</string>
    <string name="share_app">分享应用</string>
    <string name="update_key">修改密码</string>
    <string name="confirm">确定</string>
    <string name="old_key">请输入原密码</string>
    <string name="new_key">请输入新密码</string>
    <string name="new_key_again">请再输入一次</string>
    <string name="about_app">关于应用</string>
    <string name="user_communication_group">用户交流群</string>
    <string name="user_communication_group_number">156481561</string>
    <string name="email">邮箱</string>
    <string name="email_number">1980302350@qq.com</string>
    <string name="customer_service_telephone">客服电话</string>
    <string name="customer_service_telephone_number">18341842769</string>
    <string name="service_item">服务条款</string>
    <string name="score">去评分</string>
    <string name="my_message">我的消息</string>
    <string name="system_notice">系统通知</string>
    <string name="singleline_text">单行文字</string>
    <string name="system_notice_time">2016-6-25</string>
    <string name="system_notice_time_specific_1">2月12日 12:35</string>
    <string name="system_notice_time_specific_2">2月12日 12:36</string>
    <string name="system_notice_content">我是系统通知内容</string>
    <string name="system_notice_reply">我是回复</string>
    <string name="reply_hint">回复</string>
    <string name="send">发送</string>
    <string name="find_the_key">找回密码</string>
    <string name="identity_authentication">身份验证：</string>
    <string name="input_phone_number_hint">请输入您的手机号</string>
    <string name="input_verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="set_new_key">设置新密码:</string>
    <string name="input_the_new_key_hint">请输入新密码</string>
    <string name="input_the_new_key_again_hint">请再次输入新密码</string>
    <string name="register_teacher">家教注册</string>
    <string name="register_student">学生注册</string>
    <string name="set_the_key">设置密码:</string>
    <string name="input_the_key_hint">请设置密码</string>
    <string name="create_info">创建信息</string>
    <string name="user_name_">用户名</string>
    <string name="user_name">发电机启动</string>
    <string name="sex_student">学生性别</string>
    <string name="school">学校</string>
    <string name="school_name">阜新市第十一中学</string>
    <string name="grade_">年级</string>
    <string name="grade">初二</string>
    <string name="finish">完成</string>
    <string name="ignore">跳过</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="head_portrait">头像</string>
    <string name="name">姓名</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="class_">班级</string>
    <string name="email_1">邮箱</string>
    <string name="address">家庭地址</string>
    <string name="contact_phone">联系电话</string>
    <string name="person_info">个人信息</string>
    <string name="school_info">在校信息</string>
    <string name="teach_info">教学信息</string>
    <string name="academy">学院</string>
    <string name="student_id">学号</string>
    <string name="a">科目（仅可选择两科，向左滑动模块可删除）</string>
    <string name="primary_school">小学</string>
    <string name="teach_time">上课时间</string>
    <string name="open_appointment">开放预约</string>
    <string name="exit">退出</string>


</resources>
