<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/teacher_name"
            android:layout_alignBottom="@id/teacher_academy"
            android:src="@mipmap/women"/>
        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image"
            android:text="@string/teacher_name"/>
        <ImageView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/teacher_name"
            android:layout_alignBottom="@id/teacher_name"
            android:layout_toRightOf="@id/teacher_name"
            android:src="@mipmap/manimg"/>
        <TextView
            android:id="@+id/teacher_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_school"
            android:layout_alignLeft="@id/teacher_name"
            android:layout_below="@id/teacher_name"/>
        <TextView
            android:id="@+id/teacher_school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/teacher_school"
            android:layout_below="@id/teacher_name"
            android:text="@string/teacher_school_name"/>
        <TextView
            android:id="@+id/teacher_academy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/teacher_name"
            android:layout_below="@id/teacher_school"
            android:text="@string/teacher_academy"/>
        <TextView
            android:id="@+id/teacher_academy_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/teacher_academy"
            android:layout_below="@id/teacher_school_name"
            android:text="@string/teacher_academy_name"/>
    </RelativeLayout>
</LinearLayout>
