<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#8FC5CF">
        <ImageView
            android:id="@+id/update_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="back"
            android:src="@mipmap/nav_icon_back_3"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/update_key"
                android:textSize="30dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <EditText
        android:id="@+id/old_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_key"/>
    <EditText
        android:id="@+id/new_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_key"/>
    <EditText
        android:id="@+id/new_key_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_key_again"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:background="#FFFACD"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>
